--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,14 +4,20 @@
     <string name="scan_qr_text">Scan the QR Code</string>
 
     <string name="scan_qr">Scan QR</string>
-    <string name="gen_qr">Generate custom QR</string>
+    <string name="gen_custom_qr">Generate custom QR</string>
     <string name="choose_img_qr">Choose image in storage</string>
 
     <string name="your_qr_code">Your QR code</string>
     <string name="your_qr_content">Your QR content</string>
     <string name="number">+1472732234</string>
 
+    <string name="gen_qr">Generate QR</string>
+
+    <string name="gen_text">Write anything</string>
+
     <string name="interact_button">Interact</string>
     <string name="save_button">Save</string>
     <string name="share_button">Share</string>
+    <string name="home_button">Home button</string>
+
 </resources>
