QRGenEmail major work 1

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,9 @@
 
     <string name="gen_text">Write anything</string>
     <string name="gen_phone">Enter phone number</string>
+    <string name="gen_mailto">Recipient email</string>
+    <string name="gen_subject">Email subject</string>
+    <string name="gen_body">Email body</string>
 
     <string name="interact_button">Interact</string>
     <string name="save_button">Save</string>
