--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">QR Scanner</string>
+    <string name="app_intro">QR SCANNER</string>
 
     <string name="scan_qr_text">Scan the QR Code</string>
 
